# Course-Data-Structures-Implementation

./: CMakeLists.txt  Projekt1.sln  README.md
Projekt1/: DataStructureMenu.hpp  DynamicArray.cpp  DynamicArray.hpp  MainMenu.hpp  Menu.hpp  OperationMenu.hpp  Projekt1.vcxproj  Projekt1.vcxproj.filters  SingleHeadList.cpp  SinglyLinkedList.cpp  main.cpp
